# Compass_Framework

./: .gitignore  COMPLETION_PLAN.md  PROJECT_STATUS.md  PR_BODY.md  README.md  TESTING.md  VehicleLookup_results.csv  navigation_dump.txt  navigator_impl_dump.txt  pyproject.toml  pytest.ini  run_tests.py  test_cleanup.py  test_cleanup_offline.py  test_cleanup_simple.py  test_e2e_bypass.py  test_e2e_demo.py  test_minimal_e2e.py  test_target_webapp.py  test_visual_e2e.py  verify_zoom.py  webdriver.ini
.github/: copilot-instructions.md
clients/: README.md
clients/create_missing_workitems/: CreateMissingWorkItems.py  README.md  create_missing_workitems_sample.csv  run.py  run_CreateMissingWorkItems.bat  run_CreateMissingWorkItems.ps1
data/: .gitignore  README.md  sample_mva_list.csv  sample_workitems.csv
docs/: DIAGNOSTIC_LOGGING.md  E2E_Scenerio.md  EXISTING_COMPLAINT_DETECTION.md  MANUAL_VERIFICATION_DEBUG.md  MANUAL_WORKFLOWS.md  PROJECT_STATUS.md  README.md  TESTING.md  UI_PATTERNS.md  USAGE.md  VERIFICATION_IMPROVEMENTS.md
scripts/: glass_data_lookup.py  run_unit.ps1  run_unit.sh  run_unit_integration.ps1  run_unit_integration.sh  ui_flow_sample.py  vehicle_lookup_client.py
tests/: conftest.py  test_browser_specific_mismatches.py  test_browser_version_checker.py  test_compass_runner.py  test_configuration_interface.py  test_e2e.py  test_json_configuration.py  test_legacy_driver.py  test_logger_interface.py  test_meta.py  test_public_api.py  test_selenium_navigator.py  test_standard_logger.py  test_version_checker_interface.py  test_version_compatibility.py
(+96 files in other folders)
